Updated Card pictures and starting woo interrupt

--- a/index.html
+++ b/index.html
@@ -54,58 +54,58 @@
                 <tbody class="game-grid">
                     <tr class="game-grid-row">
                         <td class="game-card">
-                            <img class="game-card-img" src="assets/img/1.jpg" alt="cake1">
+                            <img class="game-card-img" src="assets/img/1.jpg" alt="mercury">
                         </td>
                         <td class="game-card">
-                            <img class="game-card-img" src="assets/img/2.jpg" alt="cake2">
+                            <img class="game-card-img" src="assets/img/2.jpg" alt="venus">
                         </td>
                         <td class="game-card">
-                            <img class="game-card-img" src="assets/img/3.jpg" alt="cake3">
+                            <img class="game-card-img" src="assets/img/3.jpg" alt="earth">
                         </td>
                         <td class="game-card">
-                            <img class="game-card-img" src="assets/img/4.jpg" alt="cake4">
-                        </td>
-                    </tr>
-                    <tr class="game-grid-row">
-                        <td class="game-card">
-                            <img class="game-card-img" src="assets/img/5.jpg" alt="cake5">
-                        </td>
-                        <td class="game-card">
-                            <img class="game-card-img" src="assets/img/6.jpg" alt="cake6">
-                        </td>
-                        <td class="game-card">
-                            <img class="game-card-img" src="assets/img/7.jpg" alt="cake7">
-                        </td>
-                        <td class="game-card">
-                            <img class="game-card-img" src="assets/img/8.jpg" alt="cake8">
+                            <img class="game-card-img" src="assets/img/4.jpg" alt="mars">
                         </td>
                     </tr>
                     <tr class="game-grid-row">
                         <td class="game-card">
-                            <img class="game-card-img" src="assets/img/1.jpg" alt="cake1">
+                            <img class="game-card-img" src="assets/img/5.jpg" alt="jupiter">
                         </td>
                         <td class="game-card">
-                            <img class="game-card-img" src="assets/img/2.jpg" alt="cake2">
+                            <img class="game-card-img" src="assets/img/6.jpg" alt="saturn">
                         </td>
                         <td class="game-card">
-                            <img class="game-card-img" src="assets/img/3.jpg" alt="cake3">
+                            <img class="game-card-img" src="assets/img/7.jpg" alt="woo">
                         </td>
                         <td class="game-card">
-                            <img class="game-card-img" src="assets/img/4.jpg" alt="cake4">
+                            <img class="game-card-img" src="assets/img/8.jpg" alt="neptune">
                         </td>
                     </tr>
                     <tr class="game-grid-row">
                         <td class="game-card">
-                            <img class="game-card-img" src="assets/img/5.jpg" alt="cake5">
+                            <img class="game-card-img" src="assets/img/1.jpg" alt="mercury">
                         </td>
                         <td class="game-card">
-                            <img class="game-card-img" src="assets/img/6.jpg" alt="cake6">
+                            <img class="game-card-img" src="assets/img/2.jpg" alt="venus">
                         </td>
                         <td class="game-card">
-                            <img class="game-card-img" src="assets/img/7.jpg" alt="cake7">
+                            <img class="game-card-img" src="assets/img/3.jpg" alt="earth">
                         </td>
                         <td class="game-card">
-                            <img class="game-card-img" src="assets/img/8.jpg" alt="cake8">
+                            <img class="game-card-img" src="assets/img/4.jpg" alt="mars">
+                        </td>
+                    </tr>
+                    <tr class="game-grid-row">
+                        <td class="game-card">
+                            <img class="game-card-img" src="assets/img/5.jpg" alt="jupiter">
+                        </td>
+                        <td class="game-card">
+                            <img class="game-card-img" src="assets/img/6.jpg" alt="saturn">
+                        </td>
+                        <td class="game-card">
+                            <img class="game-card-img" src="assets/img/7.jpg" alt="woo">
+                        </td>
+                        <td class="game-card">
+                            <img class="game-card-img" src="assets/img/8.jpg" alt="neptune">
                         </td>
                     </tr>
                 </tbody>
