fixed bug that froze cells

--- a/index.html
+++ b/index.html
@@ -115,6 +115,24 @@
             </div>
         </section>
 
+        <!--Modal on hitting WooWoo too early -->
+        <div class="modal" id="woowooModal">
+            <div class="modal-content">
+                <span aria-label="close" role="button" class="close" id="closeModal">&times;</span>
+                <div class="modal-header">
+                    <h2>Woo! Woo!</h2>
+                </div>
+                <div class="modal-body">
+                    <div class="message">
+                        <p>You need to try harder if you are what to know what the day brings</p>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="brown-button" onClick="playAgainWoo()">Play Again &nbsp;😀</button>
+                </div>
+            </div>
+        </div>
+
         <!--Modal on game over -->
         <div class="modal" id="gameOverModal">
             <div class="modal-content">
@@ -233,16 +251,9 @@
         </div>
     </main>
     <footer>
-        <div class="page-footer">
-            <p>Made with
-                <span aria-label="love" style="color:#D81B60;">❤</span> by
-                <a href="https://adamichelle.github.io" class="page-footer-link">Aniuchi Adaobi</a>
-                <span aria-label="copyright">&COPY;</span> 2019.
-            </p>
-        </div>
+        <p>Recognition of original memory game</p>
     </footer>
     <script src="assets/js/main.js"></script>
-    <noscript>Oops!!! Sorry, you cannot play this game. Your broswer does not support Javascript.</noscript>
 </body>
 
 </html>
