woowoo detect now functional

--- a/index.html
+++ b/index.html
@@ -147,6 +147,13 @@
                             <br>in <span id="totalGameTime"></span>
                         </p>
                         <p>Your rating is: <span id="finalStarRating"></span></p>
+                        <p>
+                            Star Sign Description:
+                            <span id="starsigndes"></span>
+                            <br>
+                            Star Sign Color:
+                            <span id="starcolor"></span>
+                        </p>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -175,7 +182,7 @@
                             <option value="Cancer">Cancer</option>
                             <option value="Leo">Leo</option>
                             <option value="Virgo">Virgo</option>
-                            <option value=" Libra">Libra</option>
+                            <option value="Libra">Libra</option>
                             <option value="Scorpio">Scorpio</option>
                             <option value="Sagittarius">Sagittarius</option>
                             <option value="Capricorn">Capricorn</option>
@@ -185,16 +192,10 @@
                             <span class="selectedstarsign"></span>
                         </p>
                         <button onclick="getStarsign()">Get Star Sign</button>
-
+                        <!--
                         <p>Aztro output here....</p>
-                        <button onclick=" starSignInfo()">Fetch</button>
-                        <p>
-                            Description:
-                            <span id="starsigndes"></span>
-                            <br>
-                            Color:
-                            <span id="starcolor"></span>
-                        </p>
+                        <button onclick="starSignInfo()">Fetch</button>
+                        -->
                     </div>
                 </div>
             </div>
@@ -251,7 +252,7 @@
         </div>
     </main>
     <footer>
-        <p>Recognition of original memory game</p>
+        <p>Recognition of original memory game from Aniuchi Adaobi</p>
     </footer>
     <script src="assets/js/main.js"></script>
 </body>
