jQuery control logic added

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button class="brown-button" onClick="playAgain()">Play Again &nbsp;😀</button>
+                    <button class="brown-button new-starsign" onClick="newStarsign()">New Star Sign&nbsp;😀</button>
                 </div>
             </div>
         </div>
@@ -213,10 +213,11 @@
         </div>
     </main>
     <footer>
-        <p>Recognition of original memory game from Aniuchi Adaobi</p>
+        <!--Recognition of original memory game from Aniuchi Adaobi-->
     </footer>
-    <script src="assets/js/main.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
