bootstrap initial fixes

--- a/index.html
+++ b/index.html
@@ -14,49 +14,49 @@
 <body>
     <header>
 
-        <h1>Star Sign Memory Matching Game </h1>
+        <h1 class="jumbotron">Star Sign Memory Matching Game </h1>
         <div class="container stargamesetup text-center">
             <!-- present set of buttons to select a star sign-->
             <div class="row mx-auto">
-                <div class="col ">
-                    <input src="assets/img/Aquarius.jpg" type="image" width="100%" height="auto" value="Aquarius" onclick="getStarsign(this.value)">
+                <div class="col">
+                    <input src="assets/img/Aquarius.jpg" type="image" width="50%" value=" Aquarius" onclick="getStarsign(this.value)">
                     <p>Aquarius</p>
                     <p>20 Jan - 19 Feb</p>
                 </div>
                 <div class="col">
-                    <input src="assets/img/Pisces.jpg" type="image" width="100%" height="auto" value="Pisces" onclick="getStarsign(this.value)">
+                    <input src="assets/img/Pisces.jpg" type="image" width="50%" value="Pisces" onclick="getStarsign(this.value)">
                     <p>Pisces</p>
                     <p>20 Feb - 20 Mar</p>
                 </div>
                 <div class="col">
-                    <input src="assets/img/Aries.jpg" type="image" width="100%" height="auto" value="Aries" onclick="getStarsign(this.value)">
+                    <input src="assets/img/Aries.jpg" type="image" width="50%" value="Aries" onclick="getStarsign(this.value)">
                     <p>Aries</p>
                     <p>21 Mar - 20 Apr</p>
                 </div>
                 <div class="col">
-                    <input src="assets/img/Taurus.jpg" type="image" width="100%" height="auto" value="Taurus" onclick="getStarsign(this.value)">
+                    <input src="assets/img/Taurus.jpg" type="image" width="50%" value="Taurus" onclick="getStarsign(this.value)">
                     <p>Taurus</p>
                     <p>21 Apr - 20 May</p>
                 </div>
             </div>
-            <div class="row mx-auto">
+            <div class="row py-3 mx-auto">
                 <div class="col">
-                    <input src="assets/img/Gemini.jpg" type="image" width="100%" height="auto" value="Gemini" onclick="getStarsign(this.value)">
+                    <input src="assets/img/Gemini.jpg" type="image" width="50%" value="Gemini" onclick="getStarsign(this.value)">
                     <p>Gemini</p>
                     <p>21 May - 21 Jun</p>
                 </div>
                 <div class="col">
-                    <input src="assets/img/Cancer.jpg" type="image" width="100%" height="auto" value="Cancer" onclick="getStarsign(this.value)">
+                    <input src="assets/img/Cancer.jpg" type="image" width="50%" value="Cancer" onclick="getStarsign(this.value)">
                     <p>Cancer</p>
                     <p>22 Jun - 22 Jul</p>
                 </div>
                 <div class="col">
-                    <input src="assets/img/Leo.jpg" type="image" width="100%" height="auto" value="Leo" onclick="getStarsign(this.value)">
+                    <input src="assets/img/Leo.jpg" type="image" width="50%" value="Leo" onclick="getStarsign(this.value)">
                     <p>Leo</p>
                     <p>23 Jul - 23 Aug</p>
                 </div>
                 <div class="col">
-                    <input src="assets/img/Virgo.jpg" type="image" width="100%" height="auto" value="Virgo" onclick="getStarsign(this.value)">
+                    <input src="assets/img/Virgo.jpg" type="image" width="50%" value="Virgo" onclick="getStarsign(this.value)">
                     <p>Virgo</p>
                     <p>24 Aug - 22 Sep</p>
                 </div>
@@ -64,22 +64,22 @@
             <div class="row mx-auto">
 
                 <div class="col">
-                    <input src="assets/img/Libra.jpg" type="image" width="100%" height="auto" value="Libra" onclick="getStarsign(this.value)">
+                    <input src="assets/img/Libra.jpg" type="image" width="50%" value="Libra" onclick="getStarsign(this.value)">
                     <p>Libra</p>
                     <p>23 Sep - 22 Oct</p>
                 </div>
                 <div class="col">
-                    <input src="assets/img/Scorpio.jpg" type="image" width="100%" height="auto" value="Scorpio" onclick="getStarsign(this.value)">
+                    <input src="assets/img/Scorpio.jpg" type="image" width="50%" value="Scorpio" onclick="getStarsign(this.value)">
                     <p>Scorpio</p>
                     <p>23 Oct - 21 Nov</p>
                 </div>
                 <div class="col">
-                    <input src="assets/img/Sagittarius.jpg" type="image" width="100%" height="auto" value="Sagittarius" onclick="getStarsign(this.value)">
+                    <input src="assets/img/Sagittarius.jpg" type="image" width="50%" value="Sagittarius" onclick="getStarsign(this.value)">
                     <p>Sagittarius</p>
                     <p>22 Nov - 19 Dec</p>
                 </div>
                 <div class="col">
-                    <input src="assets/img/Capricorn.jpg" type="image" width="100%" height="auto" value="Capricorn" onclick="getStarsign(this.value)">
+                    <input src="assets/img/Capricorn.jpg" type="image" width="50%" value="Capricorn" onclick="getStarsign(this.value)">
                     <p>Capricorn</p>
                     <p>20 Dec - 19 Jan</p>
                 </div>
